--- a/index.html
+++ b/index.html
@@ -1,7 +1,13 @@
 <!DOCTYPE html>
-<html>
+ <html>
+  <head>
+   <title>My Portfolio</title>
+<!– Bootstrap –>
+   <link href=”css/bootstrap.min.css” rel=”stylesheet”>
+  </head>
 <body>
-    <h1>Yo what it do shorty.</h1>
-    <p>TEST WEBSITE</p>
+   <h1>yo what it do shorty</h1>
+   <script src=”http://code.jquery.com/jquery-latest.js”></script>
+   <script src=”js/bootstrap.min.js”></script>
 </body>
 </html>
